--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,25 @@
 <IfModule mod_rewrite.c>
-     RewriteEngine on
+     #RewriteEngine on
 
-     RewriteCond %{REQUEST_FILENAME} !-f
-     RewriteCond %{REQUEST_FILENAME} !-d
+     #RewriteCond %{REQUEST_FILENAME} !-f
+     #RewriteCond %{REQUEST_FILENAME} !-d
 
-     RewriteRule ^(.*)$ index.php/$1 [L]
+     #RewriteRule ^(.*)$ index.php/$1 [L]
+     RewriteEngine On
+
+     RewriteCond %{HTTP_HOST} ^www\.36storiesapp\.com$ [NC]
+     RewriteRule ^(.+)$ http://36storiesapp.com$1 [R=301,L]
+
+     RewriteCond %{REQUEST_URI} ^/.+$
+     RewriteCond %{REQUEST_FILENAME} \.(gif|jpe?g|png|js|css|swf|php|ico|txt|pdf)$ [OR]
+     RewriteCond %{REQUEST_FILENAME} -f [OR]
+     RewriteCond %{REQUEST_FILENAME} -d [OR]
+     RewriteCond %{REQUEST_FILENAME} -l
+     RewriteRule ^ - [L]
+
+     RewriteCond %{HTTP_HOST} !^www\.36storiesapp\.com$ [NC]
+     RewriteCond %{HTTP_HOST} ^(www\.)?([^\.]+)\.36storiesapp\.com$ [NC]
+     RewriteRule ^(.*)$ /index.php?/$1?subdomain=%2 [PT,L,QSA]
+
+     RewriteRule ^(.*)$ /index.php?/$1 [PT,L,QSA]
 </IfModule>
